# bitcoin-usb

./: .gitignore  .pre-commit-config.yaml  README.md  demo.py  pyproject.toml  requirements.in  requirements.txt  setup.py
.github/workflows/: python-tests.yml
bitcoin_usb/: __init__.py  address_types.py  demo_gui.py  device.py  dialogs.py  gui.py  hwi_quick.py  seed_tools.py  software_signer.py  spinning_button.py  tool_gui.py  udevwrapper.py  usb_gui.py  util.py
bitcoin_usb/device_scripts/: trezor_firmware.py
tests/: test_address_types.py  test_derivation.py  test_descriptor_info.py  test_psbt_finalizer.py  test_psbt_tools.py  test_software_signer.py
