[tool.black]
line-length = 110

[tool.mypy]
no_implicit_optional = false
ignore_missing_imports = true
show_error_codes = true 
disable_error_code = "assignment"



[tool.poetry]
name = "bitcoin-usb"
version = "1.0.2"
authors = ["andreasgriffin <andreasgriffin@proton.me>"]
license = "GPL-3.0"
readme = "README.md"
description = "Wrapper around hwi, such that one can sign bdk PSBTs directly"
homepage = "https://github.com/andreasgriffin/bitcoin-usb"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
bdkpython ="1.2.0"
# HWI didnt merge the Jade Plus Fix yet, so I am using the head of HWI + the Jade Plus udev rule fix
hwi =  { git = "https://github.com/bitcoin-core/HWI.git", branch = "master" }  # "^3.0.0"
pyqt6 = "^6.6.1"
mnemonic = "^0.21"
requests = "^2.32.3" # essential for Jade to work
trezor = "^0.13.9" 
bitcoin-safe-lib = "^0.2.6"



[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
 
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
