[tool.black]
line-length = 110

[tool.mypy]
no_implicit_optional = false
ignore_missing_imports = true
show_error_codes = true 
disable_error_code = "assignment"



[tool.poetry]
name = "bitcoin-usb"
version = "2.0.0"
authors = ["andreasgriffin <andreasgriffin@proton.me>"]
license = "GPL-3.0"
readme = "README.md"
description = "Wrapper around hwi, such that one can sign bdk PSBTs directly"
homepage = "https://github.com/andreasgriffin/bitcoin-usb"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
bdkpython ="^2.0.0"
# HWI didnt merge the Jade Plus Fix yet, so I am using the head of HWI + the Jade Plus udev rule fix
hwi =  { git = "https://github.com/bitcoin-core/HWI.git", branch = "master" }  # "^3.0.0"
pyqt6 = "^6.6.1"
mnemonic = "^0.21"
requests = "^2.32.3" # essential for Jade to work
trezor = "^0.13.9" 
bitcoin-safe-lib = {  git = "https://github.com/andreasgriffin/bitcoin-safe-lib.git", branch = "main" }  


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
 
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"





[tool.ruff]
target-version = "py310"
line-length = 110
src = ["bitcoin_usb"]

[tool.ruff.lint]
# E+F are defaults; include I for isort-equivalent import sorting and a few handy extras.
select = ["E", "F", "I", "B", "UP"] 
ignore = ["E501"]

[tool.ruff.lint.isort]
# Optionally tune first/third party detection:
known-first-party = ["bitcoin_usb"]


[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["ALL"]
"tools/**/*" = ["ALL"]


[tool.ruff.format]
# Ruff formatter is Black-compatible; keep defaults or tweak here.


